# waas

./: Cargo.toml  README.md
src/: db.rs  main.rs  service.rs  template.rs  web_app.rs
src/api/: mod.rs
src/web_app/: mod.rs  template.rs  view_entry.rs  view_main.rs
