[package]
name = "waas"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "3.1.1", features = ["session"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
serde = { version = "1.0.210", features = ["derive"] }
