[package]
name = "waas"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "3.1.1", features = ["session", "sse"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
serde = { version = "1.0.210", features = ["derive"] }
pwhash = { version = "1.0.0" }
rand = { version = "0.8.5" }
futures-util = { version = "0.3.21" }
tokio-stream = "0.1.8"
k256="0.9.6"
rand_core="0.6.3"
base64 = "0.22.1"
